--- a/src/app/main/sketch-info/sketch-info.component.html
+++ b/src/app/main/sketch-info/sketch-info.component.html
@@ -1,20 +1,14 @@
 <div class="ss-sketch">
 
-  <div class="d-flex mt-2">
+  <div class="d-flex align-items-center mt-2">
 
     <b>Sketch by:</b>
 
     <div class="ss-sketch__user-info">
 
-      <img
+      <img [src]="sketch?.owner.photoURL" alt="" />
 
-        src="https://lh3.googleusercontent.com/a-/AOh14GgEeQDvVh8JFRcmddZou3WeeF72mKasmmPaDC5nsA=s96-c"
-
-        alt=""
-
-      />
-
-      <span>Jhasmin Zsanelle Borromeo</span>
+      <span>{{ sketch?.owner.displayName }}</span>
 
     </div>
 
@@ -24,7 +18,7 @@
 
     <b>Name: </b>
 
-    <span> Patrick </span>
+    <span> {{ sketch?.name }} </span>
 
   </div>
 
@@ -32,20 +26,12 @@
 
     <b>Description: </b>
 
-    <span>wAAAAAAAAH</span>
+    <span>{{ sketch?.description }}</span>
 
   </div>
 
 
 
-  <img
-
-    src="https://firebasestorage.googleapis.com/v0/b/stephenvinuya.appspot.com/o/sketches%2Fu9odcpetnz?alt=media&token=cea82676-5b56-4abe-969c-25f4e00218ff"
-
-    alt=""
-
-    class="ss-sketch__sketch-image"
-
-  />
+  <img [src]="sketch?.imageURL" alt="" class="ss-sketch__sketch-image" />
 
 </div>
