--- a/src/app/main/my-sketch-list/my-sketch-list.component.html
+++ b/src/app/main/my-sketch-list/my-sketch-list.component.html
@@ -44,11 +44,23 @@
 
 <div class="ss-sketch-list">
 
-  <div class="ss-sketch-list__sketch-item" *ngFor="let s of [1]">
+  <div
+
+    class="ss-sketch-list__sketch-item"
+
+    *ngFor="let s of sketches"
+
+    [ngStyle]="{ backgroundImage: 'url(' + s.imageURL + ')' }"
+
+  >
 
     <div class="ss-sketch-list__sketch-item-footer">
 
-      <span> Ghost by <b>Unknown</b> </span>
+      <span>
+
+        {{ s.name }}
+
+      </span>
 
     </div>
 
