--- a/src/app/main/sketch-list/sketch-list.component.html
+++ b/src/app/main/sketch-list/sketch-list.component.html
@@ -4,13 +4,25 @@
 
     class="ss-sketch-list__sketch-item"
 
-    *ngFor="let s of [1, 2, 3, 4, 5, 6, 7, 8, 9, 0]"
+    *ngFor="let s of sketches"
+
+    [ngStyle]="{ backgroundImage: 'url(' + s.imageURL + ')' }"
 
   >
 
-    <a routerLink="/main/sketch" class="ss-sketch-list__sketch-item-footer">
+    <a
 
-      <span> Ghost by <b>Unknown</b> </span>
+      [routerLink]="['/main/sketch', s.id]"
+
+      class="ss-sketch-list__sketch-item-footer"
+
+    >
+
+      <span>
+
+        {{ s.name }} by <b>{{ s.owner.displayName }}</b>
+
+      </span>
 
     </a>
 
